--- a/Lesson-1/index.html
+++ b/Lesson-1/index.html
@@ -187,19 +187,71 @@
                 <div class="bottom__main__part1">
                     <div class="img__bottom__1">
                         <img src="../Lesson-1/img/Button_bottom2.svg" alt="">
-                        <p class="style__text_bottom__1">Sales & discounts</p>
-                        <p class="style__text_bottom__2">Worldwide delivery on all. Authorit tively morph
+                        <p class="style__text_bottom__3">Sales & discounts</p>
+                        <p class="style__text_bottom__4">Worldwide delivery on all. Authorit tively morph
                             next-generation innov tion with extensive models.</p>
                     </div>
                 </div>
-                <div class="bottom__main__part1"></div>
+                <div class="bottom__main__part1">
+                    <div class="img__bottom__1">
+                        <img src="../Lesson-1/img/Button_bottom3.svg" alt="photo">
+                    </div>
+                    <p class="style__text_bottom__1">Quality assurance</p>
+                    <p class="style__text_bottom__2">Worldwide delivery on all. Authorit tively morph next-generation
+                        innov tion with extensive models.</p>
 
+                </div>
             </div>
-
-
         </div>
     </div>
 
+    <div class="container__2">
+        <div class="footer__background">
+            <div class="container">
+                <div class="footer">
+                    <div class="footer__block__left">
+                        <div class="img_footer">
+                            <img src="../Lesson-1/img/woman.svg" alt="photo">
+                        </div>
+                        <p class="text__footer">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar
+                            purus
+                            condimentum“</p>
+                    </div>
+                    <div class="footer__block__right">
+                        <p class="text__footer__2">SUBSCRIBE <br>
+                            <span class="text__footer__3">FOR OUR NEWLETTER AND PROMOTION</span>
+                        </p>
+                        <div class="footer__placeholder">
+                            <div><input type="input" placeholder="Enter Your Email" class="input">
+                            </div>
+                            <div><a href="#" class="footer_button"></a>
+                            </div>
+                            <div class="footer_button__2">
+                                <a href="#" class="footer_button__3"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bottom_end">
+        <div class="container">
+            <div class="bottom__content">
+                <div class="bottom__content__left">
+                    <p class="bottom__content__text">© 2021 Brand All Rights Reserved.</p>
+                </div>
+                <div class="bottom__content__right">
+                    <a href="#" class="facebook"></a>
+                    <a href="#" class="instagram"></a>
+                    <a href="#" class="P"></a>
+                    <a href="#" class="twitter"></a>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
