--- a/Lesson-1/index.html
+++ b/Lesson-1/index.html
@@ -60,28 +60,23 @@
         <div class="middle">
             <div class="middle__block__1">
                 <a href="#" class="button__left"></a>
-                <p class="text__inside">30% OFF <br> <span class="big__text">FOR WOMEN</span></p>
+                <a href="#" class="text__inside">30% OFF <br> <span class="big__text">FOR WOMEN</span></a>
             </div>
             <div class="middle__block__1">
                 <a href="#" class="button__middle"></a>
-                <p class="text__inside">HOT DEAL
-                    <br> <span class="big__text">
-                        FOR MEN</span>
-                </p>
+                <a href="#" class="text__inside">HOT DEAL <br> <span class="big__text">FOR MEN</span></a>
             </div>
             <div class="middle__block__1">
                 <a href="#" class="button__right"></a>
-                <p class="text__inside">NEW ARRIVALS
-                    <br> <span class="big__text">
-                        FOR KIDS</span>
-                </p>
+                <a href="#" class="text__inside">NEW ARRIVALS
+                    <br> <span class="big__text">FOR KIDS</span></a>
             </div>
             <div class="middle__block__2">
                 <a href="#" class="button__bottom"></a>
-                <p class="text__inside__bottom">LUXIROUS & TRENDY
+                <a href="#" class="text__inside__bottom">LUXIROUS & TRENDY
                     <br> <span class="big__text">
-                        ACCESORIES</span>
-                </p>
+                        ACCESORIES</span></a>
+
             </div>
         </div>
     </div>
