--- a/Lesson-1/catalog.html
+++ b/Lesson-1/catalog.html
@@ -27,33 +27,7 @@
                     </form>
                 </div>
                 <div class="block_3">
-                    <details>
-                        <summary>
-                            <a href="#" class="menu__img"></a>
-                        </summary>
-                        <div class="menu">
-                            <p class="menu__text">MENU</p>
-                            <h3 class="menu__main">MAN</h3>
-                            <a href="#" class="menu__link">Accessories</a>
-                            <a href="#" class="menu__link">Bags</a>
-                            <a href="#" class="menu__link">Denim</a>
-                            <a href="#" class="menu__link">T-Shirts</a>
-                            <h3 class="menu__main">WOMAN</h3>
-                            <a href="#" class="menu__link">Accessories</a>
-                            <a href="#" class="menu__link">Jackets & Coats</a>
-                            <a href="#" class="menu__link">Polos</a>
-                            <a href="#" class="menu__link">T-Shirts</a>
-                            <a href="#" class="menu__link">Shirts</a>
-                            <h3 class="menu__main">KIDS</h3>
-                            <a href="#" class="menu__link">Accessories</a>
-                            <a href="#" class="menu__link">Jackets & Coats</a>
-                            <a href="#" class="menu__link">Polos</a>
-                            <a href="#" class="menu__link">T-Shirts</a>
-                            <a href="#" class="menu__link">Shirts</a>
-                            <a href="#" class="menu__link">Bags</a>
-                        </div>
-                    </details>
-
+                    <img src="../Lesson-1/img/h3.svg" alt="photo">
                 </div>
                 <div class="block_4">
                     <a href="#" class="img__catalog"></a>
@@ -65,58 +39,28 @@
         </div>
     </div>
 
-    <div class="top">
+    <div class="top__catalog__background">
         <div class="container">
-            <div class="top__main">
-
-                <div class="top__main__left">
-                    <img src="../Lesson-1/img/Man.svg" alt="photo">
+            <div class="top__catalog">
+                <div class="top__catalog__left">
+                    <p class="top__catalog__text">NEW ARRIVALS </p>
                 </div>
-                <div class="top__main__right">
-                    <div class="rectangle">
-                    </div>
-                    <div class="top__text">
-                        <p class="top__text__first">THE BRAND</p>
-                        <p class="top__text__second">OF LUXERIOUS <span class="text__color">FASHION</span> </p>
-                    </div>
+                <div class="top__catalog__right">
+                    <p class="top__catalog__text__right">HOME / MEN / <span class="top__catalog__text__right__2">NEW
+                            ARRIVALS</span> </p>
                 </div>
             </div>
         </div>
     </div>
     <div class="container">
-        <div class="middle">
-            <div class="middle__block__1">
-                <a href="#" class="button__left"></a>
-                <a href="#" class="text__inside">30% OFF <br> <span class="big__text">FOR WOMEN</span></a>
-            </div>
-            <div class="middle__block__1">
-                <a href="#" class="button__middle"></a>
-                <a href="#" class="text__inside">HOT DEAL <br> <span class="big__text">FOR MEN</span></a>
-            </div>
-            <div class="middle__block__1">
-                <a href="#" class="button__right"></a>
-                <a href="#" class="text__inside">NEW ARRIVALS
-                    <br> <span class="big__text">FOR KIDS</span></a>
-            </div>
-            <div class="middle__block__2">
-                <a href="#" class="button__bottom"></a>
-                <a href="#" class="text__inside__bottom">LUXIROUS & TRENDY
-                    <br> <span class="big__text">
-                        ACCESORIES</span></a>
-
+        <div class="main__page">
+            <div class="main__page__left">FILTER</div>
+            <div class="main__page__right">
+                <p class="page__1">TRENDING NOW</p>
+                <p class="page__1">SIZE </p>
+                <p class="page__1">PRICE</p>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="middle__text">
-            <p class="middle__text__inside">Fetured Items</p>
-        </div>
-        <div class="middle__text__2">
-            <p class="middle__text__inside__2">Shop for items based on what we featured in this week</p>
-        </div>
-    </div>
-
-    <div class="container">
         <div class="cards">
             <div class="card">
                 <a href="#" class="button__card__1"></a>
@@ -131,7 +75,7 @@
 
             </div>
             <div class="card">
-                <a href="#" class="button__card__2"></a>
+                <a href="#" class="button__card__7"></a>
                 <div class="text__card">
                     <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
                     <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
@@ -164,7 +108,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#" class="button__card__5"></a>
+                <a href="#" class="button__card__8"></a>
                 <div class="text__card">
                     <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
                     <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
@@ -175,7 +119,40 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#" class="button__card__6"></a>
+                <a href="#" class="button__card__9"></a>
+                <div class="text__card">
+                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym Ellery
+                        teams
+                        up with Moda Operandi.</p>
+                    <p class="text__card__style3">$52.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="#" class="button__card__10"></a>
+                <div class="text__card">
+                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym Ellery
+                        teams
+                        up with Moda Operandi.</p>
+                    <p class="text__card__style3">$52.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="#" class="button__card__11"></a>
+                <div class="text__card">
+                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
+                        arbiter of cool Kym Ellery
+                        teams
+                        up with Moda Operandi.</p>
+                    <p class="text__card__style3">$52.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="#" class="button__card__12"></a>
                 <div class="text__card">
                     <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
                     <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
@@ -187,46 +164,10 @@
             </div>
         </div>
     </div>
-
     <div class="container">
-        <div class="button_bottom">
-            <a href="#" class="button_bottom_img"></a>
+        <div class="pages">
         </div>
     </div>
-
-    <div class="bottom__part">
-        <div class="container">
-            <div class="bottom__main">
-                <div class="bottom__main__part1">
-                    <div class="img__bottom__1">
-                        <img src="../Lesson-1/img/img_bottom1.svg" alt="photo">
-                    </div>
-                    <p class="style__text_bottom__1">Free Delivery</p>
-                    <p class="style__text_bottom__2">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion with extensive
-                        models.</p>
-                </div>
-                <div class="bottom__main__part1">
-                    <div class="img__bottom__1">
-                        <img src="../Lesson-1/img/Button_bottom2.svg" alt="">
-                        <p class="style__text_bottom__3">Sales & discounts</p>
-                        <p class="style__text_bottom__4">Worldwide delivery on all. Authorit tively morph
-                            next-generation innov tion with extensive models.</p>
-                    </div>
-                </div>
-                <div class="bottom__main__part1">
-                    <div class="img__bottom__1">
-                        <img src="../Lesson-1/img/Button_bottom3.svg" alt="photo">
-                    </div>
-                    <p class="style__text_bottom__1">Quality assurance</p>
-                    <p class="style__text_bottom__2">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion with extensive models.</p>
-
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="container__2">
         <div class="footer__background">
             <div class="container">
