--- a/Lesson-1/catalog.html
+++ b/Lesson-1/catalog.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <div class="container">
-            <div class="header__inside">
+            <nav class="header__inside">
                 <div class="block">
                     <a href="#" class="img__main"></a>
                 </div>
@@ -35,9 +35,9 @@
                 <div class="block_5">
                     <a href="#" class="img__basket"></a>
                 </div>
-            </div>
+            </nav>
         </div>
-    </div>
+    </header>
 
     <div class="top__catalog__background">
         <div class="container">
@@ -61,7 +61,7 @@
                 <p class="page__1">PRICE</p>
             </div>
         </div>
-        <div class="cards">
+        <section class="cards">
             <div class="card">
                 <a href="#" class="button__card__1"></a>
                 <div class="text__card">
@@ -162,24 +162,60 @@
                     <p class="text__card__style3">$52.00</p>
                 </div>
             </div>
-        </div>
+        </section>
     </div>
     <div class="container">
         <div class="pages">
         </div>
     </div>
+
+    <div class="bottom__part">
+        <div class="container">
+            <div class="bottom__main">
+                <div class="bottom__main__part1">
+                    <div class="img__bottom__1">
+                        <img src="../Lesson-1/img/img_bottom1.svg" alt="photo">
+                    </div>
+                    <article class="style__text_bottom__1">Free Delivery</article>
+                    <article class="style__text_bottom__2">Worldwide delivery on all. Authorit tively morph
+                        next-generation
+                        innov tion with extensive
+                        models.</article>
+                </div>
+                <div class="bottom__main__part1">
+                    <div class="img__bottom__1">
+                        <img src="../Lesson-1/img/Button_bottom2.svg" alt="">
+                        <article class="style__text_bottom__3">Sales & discounts</article>
+                        <article class="style__text_bottom__4">Worldwide delivery on all. Authorit tively morph
+                            next-generation innov tion with extensive models.</article>
+                    </div>
+                </div>
+                <div class="bottom__main__part1">
+                    <div class="img__bottom__1">
+                        <img src="../Lesson-1/img/Button_bottom3.svg" alt="photo">
+                    </div>
+                    <article class="style__text_bottom__1">Quality assurance</article>
+                    <article class="style__text_bottom__2">Worldwide delivery on all. Authorit tively morph
+                        next-generation
+                        innov tion with extensive models.</article>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container__2">
         <div class="footer__background">
             <div class="container">
                 <div class="footer">
-                    <div class="footer__block__left">
+                    <figure class="footer__block__left">
                         <div class="img_footer">
                             <img src="../Lesson-1/img/woman.svg" alt="photo">
                         </div>
                         <p class="text__footer">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar
                             purus
                             condimentum“</p>
-                    </div>
+                    </figure>
                     <div class="footer__block__right">
                         <p class="text__footer__2">SUBSCRIBE <br>
                             <span class="text__footer__3">FOR OUR NEWLETTER AND PROMOTION</span>
@@ -199,7 +235,7 @@
         </div>
     </div>
 
-    <div class="bottom_end">
+    <footer class="bottom_end">
         <div class="container">
             <div class="bottom__content">
                 <div class="bottom__content__left">
@@ -214,7 +250,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
 
 </html>
