--- a/Lesson-1/catalog.html
+++ b/Lesson-1/catalog.html
@@ -57,8 +57,21 @@
             <div class="main__page__left">FILTER</div>
             <div class="main__page__right">
                 <p class="page__1">TRENDING NOW</p>
+                <a href="#" class="page__button"></a>
                 <p class="page__1">SIZE </p>
+                <details>
+                    <summary class="page__button">
+                        <a href="#"></a>
+                    </summary>
+                    <div class="menu__size">
+                        <p><input class="input__menu" type="checkbox" name="a" value="1417"> XS</p>
+                        <p><input class="input__menu" type="checkbox" name="a" value="1680"> S</p>
+                        <p><input class="input__menu" type="checkbox" name="a" value="1883"> M</p>
+                        <p><input class="input__menu" type="checkbox" name="a" value="1934"> L</p>
+                    </div>
+                </details>
                 <p class="page__1">PRICE</p>
+                <a href="#" class="page__button"></a>
             </div>
         </div>
         <section class="cards">
