--- a/Lesson-1/index.html
+++ b/Lesson-1/index.html
@@ -86,24 +86,30 @@
     <div class="container">
         <section class="middle">
             <div class="middle__block__1">
-                <a href="#" class="button__left"></a>
-                <a href="#" class="text__inside">30% OFF <br> <span class="big__text">FOR WOMEN</span></a>
+                <a href="#" class="button__left">
+                    <div class="text__inside">30% OFF <br> <span class="big__text">FOR WOMEN</span></div>
+                </a>
             </div>
             <div class="middle__block__1">
-                <a href="#" class="button__middle"></a>
-                <a href="#" class="text__inside">HOT DEAL <br> <span class="big__text">FOR MEN</span></a>
+                <a href="#" class="button__middle">
+                    <div class="text__inside">HOT DEAL <br> <span class="big__text">FOR MEN</span>
+                    </div>
+                </a>
             </div>
             <div class="middle__block__1">
-                <a href="#" class="button__right"></a>
-                <a href="#" class="text__inside">NEW ARRIVALS
-                    <br> <span class="big__text">FOR KIDS</span></a>
+                <a href="#" class="button__right">
+                    <div class="text__inside">NEW ARRIVALS
+                        <br> <span class="big__text">FOR KIDS</span>
+                    </div>
+                </a>
             </div>
             <div class="middle__block__2">
-                <a href="#" class="button__bottom"></a>
-                <a href="#" class="text__inside__bottom">LUXIROUS & TRENDY
-                    <br> <span class="big__text">
-                        ACCESORIES</span></a>
-
+                <a href="#" class="button__bottom">
+                    <div class="text__inside__bottom">LUXIROUS & TRENDY
+                        <br> <span class="big__text">
+                            ACCESORIES</span>
+                    </div>
+                </a>
             </div>
         </section>
     </div>
@@ -119,71 +125,88 @@
     <div class="container">
         <section class="cards">
             <div class="card">
-                <a href="#" class="button__card__1"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
-
+                <a href="#" class="button__card__1">
+                    <img class="card__hover" src="../Lesson-1/img/img1.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__2"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__2">
+                    <img class="card__hover" src="../Lesson-1/img/img2.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__3"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__3">
+                    <img class="card__hover" src="../Lesson-1/img/img3.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__4"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__4">
+                    <img class="card__hover" src="../Lesson-1/img/img4.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__5"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__5">
+                    <img class="card__hover" src="../Lesson-1/img/img5.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__6"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__6">
+                    <img class="card__hover" src="../Lesson-1/img/img6.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
         </section>
     </div>
