--- a/Lesson-1/catalog.html
+++ b/Lesson-1/catalog.html
@@ -76,104 +76,131 @@
         </div>
         <section class="cards">
             <div class="card">
-                <a href="#" class="button__card__1"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__1">
+                    <img class="card__hover" src="../Lesson-1/img/img1.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
 
             </div>
             <div class="card">
-                <a href="#" class="button__card__7"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__7">
+                    <img class="card__hover" src="../Lesson-1/img/img7.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__3"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__3">
+                    <img class="card__hover" src="../Lesson-1/img/img3.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__4"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__4">
+                    <img class="card__hover" src="../Lesson-1/img/img4.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__8"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__8">
+                    <img class="card__hover" src="../Lesson-1/img/img8.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__9"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__9">
+                    <img class="card__hover" src="../Lesson-1/img/img9.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__10"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__10">
+                    <img class="card__hover" src="../Lesson-1/img/img10.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__11"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__11">
+                    <img class="card__hover" src="../Lesson-1/img/img11.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="button__card__12"></a>
-                <div class="text__card">
-                    <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
-                    <p class="text__card__style2">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery
-                        teams
-                        up with Moda Operandi.</p>
-                    <p class="text__card__style3">$52.00</p>
-                </div>
+                <a href="#" class="button__card__12">
+                    <img class="card__hover" src="../Lesson-1/img/img12.svg" alt="photo">
+                    <div class="text__card">
+                        <p class="text__card__style1">ELLERY X M'O CAPSULE</p>
+                        <p class="text__card__style2">Known for her sculptural takes on traditional tailoring,
+                            Australian
+                            arbiter of cool Kym Ellery
+                            teams
+                            up with Moda Operandi.</p>
+                        <p class="text__card__style3">$52.00</p>
+                    </div>
+                </a>
             </div>
         </section>
     </div>
