--- a/Lesson-1/catalog.html
+++ b/Lesson-1/catalog.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -55,6 +55,17 @@
     <div class="container">
         <div class="main__page">
             <div class="main__page__left">FILTER</div>
+            <details>
+                <summary class="page__button__left">
+                    <a href="#"></a>
+                </summary>
+                <div class="menu__size__left">
+                    <p><input class="input__menu" type="checkbox" name="a" value="1417"> XS</p>
+                    <p><input class="input__menu" type="checkbox" name="a" value="1680"> S</p>
+                    <p><input class="input__menu" type="checkbox" name="a" value="1883"> M</p>
+                    <p><input class="input__menu" type="checkbox" name="a" value="1934"> L</p>
+                </div>
+            </details>
             <div class="main__page__right">
                 <p class="page__1">TRENDING NOW</p>
                 <a href="#" class="page__button"></a>
@@ -88,7 +99,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
-
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__7">
@@ -103,6 +119,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__3">
@@ -117,6 +139,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__4">
@@ -131,6 +159,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__8">
@@ -145,6 +179,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__9">
@@ -159,6 +199,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__10">
@@ -173,6 +219,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__11">
@@ -187,6 +239,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__12">
@@ -201,6 +259,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
         </section>
     </div>
