--- a/Lesson-1/index.html
+++ b/Lesson-1/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -137,6 +137,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__2">
@@ -151,6 +157,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__3">
@@ -165,6 +177,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__4">
@@ -179,6 +197,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__5">
@@ -193,6 +217,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
             <div class="card">
                 <a href="#" class="button__card__6">
@@ -207,6 +237,12 @@
                         <p class="text__card__style3">$52.00</p>
                     </div>
                 </a>
+                <div class="add-box">
+                    <a href="#" class="add">
+                        <img src="../Lesson-1/img/basket.svg" alt="photo">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </div>
         </section>
     </div>
